Fixed issue that the 'Create New' menu might be disabled although creating of files is allowed. Thanks to Frank Reininghaus for the patch!

BUG: 183812

svn path=/trunk/KDE/kdebase/apps/; revision=924120